--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "antd": "^5.27.4",
+    "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router": "^7.9.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
